--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon src/index.ts",
+    "start": "node index.js",
     "build": "rimraf dist && tsc",
     "ts.check": "tsc --project tsconfig.json",
     "add-build": "git add dist",
@@ -18,22 +19,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.14",
-    "@types/node": "^18.11.9",
-    "@types/xml2js": "^0.4.14",
     "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-sonarjs": "^0.23.0",
-    "husky": "^8.0.0",
-    "nodemon": "^2.0.20",
-    "prettier": "^3.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "express-xml-bodyparser": "^0.3.0",
-    "xml2js": "^0.6.2"
+    "husky": "^8.0.3",
+    "prettier": "3.1.1"
   }
 }
